--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <h1>歡迎來到高科資管系籃</h1>
+        <img src="D.jpg" height="400"/>
         <img src="IMB.jpg" width="400" height="400"/>
         <br/>
         <a href="page2.html">球員近期數據</a>
