--- a/html/index.html
+++ b/html/index.html
@@ -1,27 +1,111 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <!--網頁編碼-->
-        <meta charset="UTF-8"></meta>
-        <meta name="description" content="高雄科技大學資管系系籃，裡免有許多關於系籃的東西"/>
-        <meta name="keywords " content="高科資管系籃"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>高科資管系籃</title>
-        <link rel="stylesheet" href="ba.css">
-    </head>
-    <body>
-        <div style=" background-color:rgb(10, 178, 190);">
-        <h1>歡迎來到高科資管系籃</h1>
-        <img src="IMB.jpg" width="610" height="400"/>
-        <br/>
-        <br/>
-        <div class="container">
-        <div class="=box-1"><a href="page2.html">球員近期數據</a></div>
-        <div class="=box-2"><a href="page3.html">比賽片段</a></div>
-        <div class="=box-3"><a href="page4.html">生涯總數據</a></div>
-        <div class="=box-4"><a href="page5.html">練習片段</a></div>
-        <div class="=box-5"><a href="page6.html">球員介紹</a></div>
-        </div>
-        </div>
-    </body>
+
+<head>
+    <style>
+        .span1 {
+            font-size: 0.6cm
+        }
+
+        .span2 {
+            font-size: 0.8cm
+        }
+
+        a {
+            color: white
+        }
+
+        .primary-btn {
+
+            font-size: 18px;
+
+            color: #fff;
+
+            height: 30px;
+
+            padding: 0px 20px 17px 20px;
+
+
+            background-color: rgb(38, 70, 120);
+
+            border: 10px solid rgb(38, 70, 120);
+
+            line-height: 5;
+
+            text-align: right;
+
+            border-radius: 10px 10px 0px 0px;
+
+            cursor: pointer;
+
+            transition: opacity 0.2s;
+
+            outline: 2px solid white;
+
+            position: relative;
+        }
+
+        .primary-btn::before {
+
+            position: absolute;
+
+            top: 50%;
+
+            left: 50%;
+
+            width: 100%;
+
+            height: 100%;
+
+            background-color: #000;
+
+            border: inherit;
+
+            border-color: #000;
+
+            border-radius: inherit;
+
+            transform: translate(-50%, -50%);
+
+            opacity: 0;
+
+            content: ' ';
+        }
+
+        .primary-btn:active::before {
+            opacity: 0.3;
+        }
+    </style>
+    <!-- 網頁編碼 -->
+    <meta charset="UTF-8">
+    </meta>
+    <title>高科資管系藍</title>
+</head>
+
+<body>
+    <div style="text-align:left ;color:black">
+        <p style="border:none; padding:63px; margin:-10px; background-color:rgb(89,89,91) ;"></p>
+        <div
+            style="display:inline-block; position:relative; padding:25px 40px 25px 25px; margin:-10px;background-color:white; border:4px solid black; c">
+            <span class="span2" style="font-family:Comic Sans Ms">　　　　　Basketball</span>
+            <br><br><br><br>
+            <div style="box-sizing: border-box ;display:inline-block;text-align:right; font-family:Comic Sans Ms" class="span1">　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　NKUST &nbsp Information Management　　　　　　</div>
+
+        </div> 
+
+    </div>
+    <div style=" box-sizing: border-box ; display:inline-block; text-align:left ;  padding:15px 0px -5px ;margin:-10px; box-sizing:border-box ; background-color:rgb(38,70,120); ">
+        
+        <br><br>
+        <p style="display:inline;">　　　　　　　　　　</p>
+        <a href="page2.html" style="display:inline-block; text-decoration:none  " class="primary-btn">球員近期數據</a>
+        <a href="page3.html" style="display:inline-block; text-decoration:none " class="primary-btn">比賽片段</a>
+        <a href="page4.html" style="display:inline-block; text-decoration:none " class="primary-btn">生涯總數據</a>
+        <a href="page5.html" style="display:inline-block; text-decoration:none " class="primary-btn">練習片段</a>
+        <a href="page6.html" style="display:inline-block; text-decoration:none " class="primary-btn">球員介紹</a>
+        <p style="display:inline;">　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　</p>
+    </div>
+</body>
+
 </html>
+<p style="display:inline;">　　　　　　　　　　</p>
