--- a/html/index.html
+++ b/html/index.html
@@ -98,9 +98,8 @@
         
         <br><br>
         <p style="display:inline;">　　　　　　　　　　</p>
-        <a href="page2.html" style="display:inline-block; text-decoration:none  " class="primary-btn">球員近期數據</a>
+        <a href="page2.html" style="display:inline-block; text-decoration:none  " class="primary-btn">球員數據</a>
         <a href="page3.html" style="display:inline-block; text-decoration:none " class="primary-btn">比賽片段</a>
-        <a href="page4.html" style="display:inline-block; text-decoration:none " class="primary-btn">生涯總數據</a>
         <a href="page5.html" style="display:inline-block; text-decoration:none " class="primary-btn">練習片段</a>
         <a href="page6.html" style="display:inline-block; text-decoration:none " class="primary-btn">球員介紹</a>
         <p style="display:inline;">　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　</p>
