--- a/html/page6.html
+++ b/html/page6.html
@@ -103,6 +103,7 @@
         </div>
         <h1>球員介紹</h1>
         <a href="index.html">回到首頁</a>
+        <img src="P.jpg" height="600"/>
         </div>
     </body>
 </html>
