--- a/html/page6.html
+++ b/html/page6.html
@@ -102,8 +102,9 @@
             <p style="display:inline;">　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　</p>
         </div>
         <h1>球員介紹</h1>
+        <P>PG=控球後衛 SG=得分後衛 SF=小前鋒 PF=大前鋒 C=中鋒</P>
         <a href="index.html">回到首頁</a>
-        <img src="P.jpg" height="600"/>
+        <img src="P3.jpg" height="800"/>
         </div>
     </body>
 </html>
