--- a/html/page6.html
+++ b/html/page6.html
@@ -102,7 +102,8 @@
             <p style="display:inline;">　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　</p>
         </div>
         <h1>球員介紹</h1>
-        <P>PG=控球後衛 SG=得分後衛 SF=小前鋒 PF=大前鋒 C=中鋒</P>
+        <P>球員位置註解：PG=控球後衛  SG=得分後衛  SF=小前鋒  PF=大前鋒  C=中鋒</P>
+        <P>110屆高科資管系籃名單</P>
         <a href="index.html">回到首頁</a>
         <img src="P3.jpg" height="800"/>
         </div>
