--- a/html/page2.html
+++ b/html/page2.html
@@ -103,6 +103,7 @@
             <p style="display:inline;">　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　</p>
         </div>
         <h1>資管球員比賽數據</h1>
+        <img src="yee.png"/>
         <a href="index.html">回到首頁</a>
 
     </body>
